adding proper googleMaps API

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
   <app-root></app-root>
-  <script src=”http://maps.googleapis.com/maps/api/js?key=AIzaSyBy9IKBwV9Tt51GQzkZTAg98i7ecAxaAs0"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBy9IKBwV9Tt51GQzkZTAg98i7ecAxaAs0"></script>
 </body>
 </html>
